--- a/Views/venues.cshtml
+++ b/Views/venues.cshtml
@@ -3,3 +3,18 @@
 }
 
 <h1>All Venues</h1>
+
+@foreach (var venue in @Model)
+{
+    <h3><a href="/venue/@venue.GetId()">@venue.GetName()</a></h3>
+}
+
+
+
+<h3>Add a new venue</h3>
+<form action="/venues/new" method="post">
+    <label for="venue-name">Venue Name: </label>
+    <input type="text" name="venue-name" id="venue-name">
+    <button type="submit" name="button" class="btn btn-primary">Add</button>
+
+</form>
