--- a/Views/band.cshtml
+++ b/Views/band.cshtml
@@ -6,5 +6,5 @@
 
 @foreach(var venue in @Model.GetVenues())
 {
-    <h3><a href="/vanue/@venue.GetId()">@venue.GetName()</a></h3>
+    <h3><a href="/venue/@venue.GetId()">@venue.GetName()</a></h3>
 }
