--- a/Views/venue.cshtml
+++ b/Views/venue.cshtml
@@ -8,3 +8,12 @@
 {
     <h3><a href="/band/@band.GetId()">@band.GetName()</a></h3>
 }
+
+<form action="venue/update" method="post">
+    <button type="Submit" name="button" class = "btn btn-warning">Update Venue Name</button>
+</form>
+
+<form action="/venue/delete/@Model.GetId()" method="post">
+    <input type="hidden" name="_method" value="DELETE">
+    <button type="Submit" name="button" class = "btn btn-danger">Delete this venue</button>
+</form>
