--- a/Views/edit_venue.cshtml
+++ b/Views/edit_venue.cshtml
@@ -3,7 +3,7 @@
 }
 
 <h2>Update name for <em>@Model.GetName()</em></h2>
-<form action="/venue/edit/@Model.GetId()" method="post">
+<form action="/venue/update/@Model.GetId()" method="post">
   <input type="hidden" name="_method" value="PATCH">
   <input name="venue-id" type="hidden" value="@Model.GetId()">
   <label for="new-venue-name">New Name: </label>
