--- a/Views/venue.cshtml
+++ b/Views/venue.cshtml
@@ -2,18 +2,41 @@
   Layout="Shared/_Layout.cshtml";
 }
 
-<h1>@Model.GetName()</h1>
+<h1>@Model["venue"].GetName()</h1>
 
-@foreach(var band in @Model.GetBands())
+@if (@Model["venueBands"].Count == 0)
 {
-    <h3><a href="/band/@band.GetId()">@band.GetName()</a></h3>
+    <h3>No bands have been added to this venue yet</h3>
+}
+else
+{
+    @foreach(var band in @Model["venueBands"])
+    {
+        <h3><a href="/band/@band.GetId()">@band.GetName()</a></h3>
+    }
 }
 
-<form action="/venue/update/@Model.GetId()" method="post">
-    <button type="Submit" name="button" class = "btn btn-warning">Update Venue Name</button>
+
+<h4>Add a band to this venue:</h4>
+<form action='/venue/add_band/@Model["venue"].GetId()' method='post'>
+  <input id='venue-id' name='venue-id' type='hidden' value='@Model["venue"].GetId()'>
+  <label for='band-id'>Select a band</label>
+  <select id='band-id' name='band-id' type='text'>
+    @foreach (var band in @Model["allBands"])
+    {
+      <option value='@band.GetId()'>@band.GetName()</option>
+    }
+  </select>
+  <button type='submit'>Add</button>
 </form>
 
-<form action="/venue/delete/@Model.GetId()" method="post">
+
+
+<form action='/venue/update/@Model["venue"].GetId()' method="post">
+    <button type="Submit" name="button" class = "btn btn-warning">Update venue name</button>
+</form>
+
+<form action='/venue/delete/@Model["venue"].GetId()' method="post">
     <input type="hidden" name="_method" value="DELETE">
     <button type="Submit" name="button" class = "btn btn-danger">Delete this venue</button>
 </form>
