add script files for the band_tracker and band_tracker_test databases

--- a/Views/band.cshtml
+++ b/Views/band.cshtml
@@ -4,6 +4,7 @@
 
 <h1>@Model["band"].GetName()</h1>
 
+<h2>Here is a list of venues where this band plays: </h2>
 @if (@Model["bandVenue"].Count == 0)
 {
     <h3>No venues have been added to this band yet</h3>
