--- a/Views/venue.cshtml
+++ b/Views/venue.cshtml
@@ -4,6 +4,8 @@
 
 <h1>@Model["venue"].GetName()</h1>
 
+<h2>Here is a list of bands that play at this venue</h2>
+
 @if (@Model["venueBands"].Count == 0)
 {
     <h3>No bands have been added to this venue yet</h3>
