--- a/Views/Shared/_layout.cshtml
+++ b/Views/Shared/_layout.cshtml
@@ -11,7 +11,7 @@
         <nav class="navbar navbar-default">
             <div class="container-fluid">
                 <div class="navbar-header">
-                    <a class="navbar-brand" href="/">Band Tracker</a>
+                    <a class="navbar-brand" href="/">Seattle Band Tracker</a>
                 </div>
                 <ul class="nav navbar-nav">
                     <li><a href="/bands">All Bands</a></li>
