--- a/Views/bands.cshtml
+++ b/Views/bands.cshtml
@@ -4,10 +4,18 @@
 
 <h1>All Bands</h1>
 
-@foreach (var band in @Model)
+@if (@Model.Count == 0)
 {
-    <h3><a href="/band/@band.GetId()">@band.GetName()</a></h3>
+    <h3>No bands have been added yet</h3>
 }
+else
+{
+    @foreach (var band in @Model)
+    {
+        <h3><a href="/band/@band.GetId()">@band.GetName()</a></h3>
+    }
+}
+
 
 <h3>Add a new band</h3>
 <form action="/bands/new" method="post">
