--- a/Views/venues.cshtml
+++ b/Views/venues.cshtml
@@ -4,10 +4,18 @@
 
 <h1>All Venues</h1>
 
-@foreach (var venue in @Model)
+@if (@Model.Count == 0)
 {
-    <h3><a href="/venue/@venue.GetId()">@venue.GetName()</a></h3>
+    <h3>No venues have been added yet</h3>
 }
+else
+{
+    @foreach (var venue in @Model)
+    {
+        <h3><a href="/venue/@venue.GetId()">@venue.GetName()</a></h3>
+    }
+}
+
 
 <h3>Add a new venue</h3>
 <form action="/venues/new" method="post">
