--- a/Views/venues.cshtml
+++ b/Views/venues.cshtml
@@ -16,10 +16,11 @@ else
     }
 }
 
-
-<h3>Add a new venue</h3>
-<form action="/venues/new" method="post">
-    <label for="venue-name">Venue Name: </label>
-    <input type="text" name="venue-name" id="venue-name">
-    <button type="submit" name="button" class="btn btn-primary">Add</button>
-</form>
+<div class="add-new">
+    <h3>Add a new venue</h3>
+    <form action="/venues/new" method="post">
+        <label for="venue-name">Venue Name: </label>
+        <input type="text" name="venue-name" id="venue-name">
+        <button type="submit" name="button" class="btn btn-primary">Add</button>
+    </form>
+</div>
