--- a/Content/css/styles.css
+++ b/Content/css/styles.css
@@ -6,8 +6,27 @@
 
 h1 {
     text-align: center;
+    font-size: 50px;
 }
 
 body {
-    background-color: #c5ddd5;
+    background-color: #d4eef4;
+    font-family: 'Cabin', sans-serif;
+}
+
+.add-new {
+    padding-top: 20px;
+}
+
+.list {
+    padding-left: 55px;
+}
+
+label{
+    font-size: 16px;
+    padding-top: 10px;
+}
+
+.index-button {
+    padding-top: 50px;
 }
