--- a/Views/Shared/_layout.cshtml
+++ b/Views/Shared/_layout.cshtml
@@ -6,6 +6,7 @@
     <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css'>
 </head>
 <link rel="stylesheet" href="/Content/css/styles.css">
+<link href="https://fonts.googleapis.com/css?family=Cabin" rel="stylesheet">
 <body>
     <div class="banner">
         <nav class="navbar navbar-default">
