--- a/Views/bands.cshtml
+++ b/Views/bands.cshtml
@@ -16,10 +16,11 @@ else
     }
 }
 
-
-<h3>Add a new band</h3>
-<form action="/bands/new" method="post">
-    <label for="band-name">Band Name: </label>
-    <input type="text" name="band-name" id="band-name">
-    <button type="submit" name="button" class="btn btn-primary">Add</button>
-</form>
+<div class="add-new">
+    <h3>Add a new band</h3>
+    <form action="/bands/new" method="post">
+        <label for="band-name">Band Name: </label>
+        <input type="text" name="band-name" id="band-name">
+        <button type="submit" name="button" class="btn btn-primary">Add</button>
+    </form>
+</div>
