--- a/Views/index.cshtml
+++ b/Views/index.cshtml
@@ -4,7 +4,16 @@
 
 <h1>Checkout what's new in the Seattle music scene!</h1>
 
+
 <div class="row">
+    <div class="col-md-2">
+        <form action="/bands" method="post" class="index-button">
+            <button type="submit" name="button" class="btn btn-primary">View All Bands</button>
+        </form>
+        <form action="/venues" method="post" class="index-button">
+            <button type="submit" name="button" class="btn btn-primary">View All Venues</button>
+        </form>
+    </div>
     <div class="col-md-4">
         <h3>Upcoming Shows</h3>
         <h4>Remorse Footstep</h4>
@@ -12,7 +21,7 @@
         <h4>Mania Of The Clockwork Oyste</h4>
         <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
     </div>
-    <div class="col-md-8">
+    <div class="col-md-6">
         <h3>News/Events</h3>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 
@@ -20,22 +29,4 @@
 
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
     </div>
-</div>
-
-<div class="row">
-    <div class="col-md-4">
-    </div>
-    <div class="col-md-2">
-        <form action="/bands" method="post">
-            <button type="submit" name="button" class="btn btn-info">View All Bands</button>
-        </form>
-    </div>
-    <div class="col-md-2">
-        <form action="/venues" method="post">
-            <button type="submit" name="button" class="btn btn-info">View All Venues</button>
-        </form>
-    </div>
-    <div class="col-md-4">
-    </div>
-
 </div>
