--- a/Views/venue.cshtml
+++ b/Views/venue.cshtml
@@ -3,45 +3,49 @@
 }
 
 <h1>@Model["venue"].GetName()</h1>
-
-<h2>Here is a list of bands that play at this venue</h2>
-
-@if (@Model["venueBands"].Count == 0)
-{
-    <h3>No bands have been added to this venue yet</h3>
-}
-else
-{
-    @foreach(var band in @Model["venueBands"])
-    {
-        <h3><a href="/band/@band.GetId()">@band.GetName()</a></h3>
-    }
-}
-
 <div class="row">
     <div class="col-md-4">
-        <h4>Add a band to this venue:</h4>
-        <form action='/venue/add_band/@Model["venue"].GetId()' method='post'>
-            <input id='venue-id' name='venue-id' type='hidden' value='@Model["venue"].GetId()'>
-            <label for='band-id'>Select a band</label>
-            <select id='band-id' name='band-id' type='text'>
-                @foreach (var band in @Model["allBands"])
-                {
-                    <option value='@band.GetId()'>@band.GetName()</option>
-                }
-            </select>
-            <button type='submit'>Add</button>
-        </form>
     </div>
-    <div class="col-md-4">
+    <div class="col-md-2">
         <form action='/venue/update/@Model["venue"].GetId()' method="post">
             <button type="Submit" name="button" class = "btn btn-warning">Update venue name</button>
         </form>
     </div>
-    <div class="col-md-4">
+    <div class="col-md-2">
         <form action='/venue/delete/@Model["venue"].GetId()' method="post">
             <input type="hidden" name="_method" value="DELETE">
             <button type="Submit" name="button" class = "btn btn-danger">Delete this venue</button>
         </form>
     </div>
+    <div class="col-md-4">
+    </div>
+</div>
+
+<h2>Bands that play at this venue</h2>
+
+@if (@Model["venueBands"].Count == 0)
+{
+    <h3 class="list">No bands have played at this venue yet</h3>
+}
+else
+{
+    @foreach(var band in @Model["venueBands"])
+    {
+        <h3 class="list"><a href="/band/@band.GetId()">@band.GetName()</a></h3>
+    }
+}
+
+<div class="add-new">
+    <h3>Add a band to this venue:</h3>
+    <form action='/venue/add_band/@Model["venue"].GetId()' method='post'>
+        <input id='venue-id' name='venue-id' type='hidden' value='@Model["venue"].GetId()'>
+        <label for='band-id'>Select a band</label>
+        <select id='band-id' name='band-id' type='text'>
+            @foreach (var band in @Model["allBands"])
+            {
+                <option value='@band.GetId()'>@band.GetName()</option>
+            }
+        </select>
+        <button type='submit'>Add</button>
+    </form>
 </div>
